Addition of styling elements, fixed row gap discrepancy

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,16 @@ h1
     flex-grow: 2;
 }
 
+button:hover
+{
+    cursor: pointer;
+}
+
+select:hover
+{
+    cursor: pointer;
+}
+
 #new-book-button
 {
     font-family: 'Old Standard TT', serif;
@@ -30,7 +40,6 @@ h1
 
 #new-book-button:hover
 {
-    cursor: pointer;
     text-decoration: underline;
 }
 
@@ -47,15 +56,28 @@ h1
     padding: 10px;
 }
 
+#upload-image-button-container
+{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#upload-image-label
+{
+    margin-top: 3px;
+}
+
 #library-container
 {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-template-rows: repeat(auto-fill, 520px);
-    grid-row-gap: 20px;
+    grid-row-gap: 65px;
     grid-column-gap: 20px;
     margin-top: 40px;
     margin-left: 60px;
+    margin-bottom: 40px;
 }
 
 .book-container
